--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -68,6 +68,13 @@ agent-services:
             value: '30'
           - name: LOGLEVEL
             value: INFO
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     llm-nim:
       address: nemollm-inference-nemollm-infer-deployment-llm-service
@@ -116,6 +123,13 @@ analytics-services:
             value: ""
           - name: LOGLEVEL
             value: INFO
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     llm-nim:
       address: nemollm-inference-nemollm-infer-deployment-llm-service
@@ -190,6 +204,13 @@ retriever-canonical:
             value: '20'
           - name: LOGLEVEL
             value: INFO
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     llm-nim:
       address: nemollm-inference-nemollm-infer-deployment-llm-service
@@ -256,6 +277,13 @@ retriever-structured:
             value: PdM_machines
           - name: LOGLEVEL
             value: INFO
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     llm-nim:
       address: nemollm-inference-nemollm-infer-deployment-llm-service
@@ -273,6 +301,13 @@ api-gateway:
             value: http://agent-services-agent-services-deployment-agent-service:8081
           - name: ANALYTICS_SERVER_URL
             value: http://analytics-services-analytics-deployment-analytics-service:8082
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     chain-server-agent:
       address: agent-services-agent-services-deployment-agent-service
@@ -317,6 +352,13 @@ ingest-client:
         image: nvcr.io/nvidia/blueprint/aiva-customer-service-ingest-client:1.1.0
         imagePullPolicy: IfNotPresent
         name: ingest-pdf-to-canonical
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
   egress:
     postgres:
       address: postgres-postgres-deployment-postgres-service
@@ -336,7 +378,13 @@ ranking-ms:
           env:
           - name: NGC_API_KEY
             value: ""
-
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
 nemollm-inference:
   applicationSpecs:
     nemollm-infer-deployment:
@@ -345,6 +393,13 @@ nemollm-inference:
           env:
           - name: NGC_API_KEY
             value: ""
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
 
 nemollm-embedding:
   applicationSpecs:
@@ -354,3 +409,10 @@ nemollm-embedding:
           env:
           - name: NGC_API_KEY
             value: ""
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "4"
+              memory: "2Gi"
