--- a/deploy/helm/charts/aiva-ui/values.yaml
+++ b/deploy/helm/charts/aiva-ui/values.yaml
@@ -42,6 +42,11 @@ podLabels: {}
 
 podSecurityContext: {}
 
+tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
+
 securityContext: {}
 
 service:
