--- a/deploy/helm/values_override.yaml
+++ b/deploy/helm/values_override.yaml
@@ -11,7 +11,10 @@ agent-services:
   namespace: default
   serviceAccount: {}
   nodeSelector: {}
-  tolerations: []
+  tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
   affinity: {}
   storageClassName: ''
 analytics-services:
@@ -67,14 +70,20 @@ retriever-canonical:
   namespace: default
   serviceAccount: {}
   nodeSelector: {}
-  tolerations: []
+  tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
   affinity: {}
   storageClassName: ''
 retriever-structured:
   namespace: default
   serviceAccount: {}
   nodeSelector: {}
-  tolerations: []
+  tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
   affinity: {}
   storageClassName: ''
 nemollm-inference:
@@ -109,6 +118,9 @@ ingest-client:
   namespace: default
   serviceAccount: {}
   nodeSelector: {}
-  tolerations: []
+  tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
   affinity: {}
   storageClassName: ''
