--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -24,6 +24,7 @@ applicationSpecs:
         image:
           repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
           tag: 1.2.2
+          command: ["/bin/sh", "-c", "while :; do echo 'Hello'; sleep 5; done"]#manually run: /bin/bash /opt/nim/start-server.sh
         livenessProbe:
           exec:
             command:
