--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -24,6 +24,9 @@ applicationSpecs:
         image:
           repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
           tag: latest
+          command: ["/bin/sh", "-c"]#manually run: /bin/bash /opt/nim/start-server.sh
+        args:
+        - echo starting && sleep 800000;
         livenessProbe:
           exec:
             command:
