--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -21,6 +21,8 @@ applicationSpecs:
         env:
         - name: NGC_API_KEY
           value: ""
+        - name: NIM_LOW_MEMORY_MODE
+            value: "1"
         image:
           repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
           tag: latest
