--- a/deploy/helm/charts/nemollm-inference/values_debug.yaml
+++ b/deploy/helm/charts/nemollm-inference/values_debug.yaml
@@ -27,6 +27,9 @@ applicationSpecs:
         image:
           repository: nvcr.io/nim/meta/llama-3.2-3b-instruct
           tag: 1.6.0
+        command: ["/bin/bash", "-c"]#manually run: /bin/bash /opt/nim/start-server.sh
+        args:
+        - echo starting && sleep 800000;
         livenessProbe:
           exec:
             command:
