--- a/deploy/helm/Chart.yaml
+++ b/deploy/helm/Chart.yaml
@@ -8,7 +8,7 @@
 # license agreement from NVIDIA CORPORATION is strictly prohibited.
 
 apiVersion: v2
-name: blueprint-aiva
+name: blueprint-aiva2
 description: AI-VirtualAssistant RAG on NIMs
 type: application
 version: 1.1.0
