--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -12,9 +12,9 @@ global:
 
 nvcf:
   dockerRegSecrets:
-    - "ngc-docker-reg-secret"
+    - name: "ngc-docker-reg-secret"
   additionalSecrets:
-    - "ngc-secret"
+    - name: "ngc-secret"
 # model:
 #   ngcAPISecret: "ngc-api-secret"
 #   ngcAPIKey: ""
