--- a/deploy/helm/templates/aiva-ui-vs.yaml
+++ b/deploy/helm/templates/aiva-ui-vs.yaml
@@ -14,6 +14,6 @@ spec:
         prefix: /
     route:
     - destination:
-        host: aiva-aiva-ui.default.svc.cluster.local
+        host: blueprint-aiva2-aiva-ui.default.svc.cluster.local
         port:
           number: 3001
