--- a/deploy/helm/charts/postgres/values.yaml
+++ b/deploy/helm/charts/postgres/values.yaml
@@ -94,7 +94,13 @@ nodeSelector: {}
 podAnnotations: {}
 podSecurityContext: {}
 replicaCount: 1
-resources: {}
+resources:
+  requests:
+    cpu: "8"
+    memory: "30Gi"
+  limits:
+    cpu: "8"
+    memory: "30Gi"
 securityContext: {}
 storageClaims: {}
 tolerations: []
