--- a/deploy/helm/charts/ingest-client/values.yaml
+++ b/deploy/helm/charts/ingest-client/values.yaml
@@ -113,7 +113,13 @@ nodeSelector: {}
 podAnnotations: {}
 podSecurityContext: {}
 replicaCount: 1
-resources: {}
+resources:
+  limits:
+    cpu: "2"
+    memory: 30Gi
+  requests:
+    cpu: "2"
+    memory: 30Gi
 securityContext: {}
 storageClaims: {}
 tolerations: []
