--- a/deploy/helm/charts/aiva-ui/values.yaml
+++ b/deploy/helm/charts/aiva-ui/values.yaml
@@ -39,7 +39,13 @@ fullnameOverride: ""
 
 podAnnotations: {}
 podLabels: {}
-
+resources:
+  limits:
+    cpu: "2"
+    memory: 30Gi
+  requests:
+    cpu: "2"
+    memory: 30Gi
 podSecurityContext: {}
 
 tolerations:
