--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -25,8 +25,8 @@ applicationSpecs:
         - name: NIM_LOW_MEMORY_MODE
           value: "1"
         image:
-          repository: nvcr.io/nim/meta/llama-3.2-3b-instruct
-          tag: 1.6.0
+          repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
+          tag: latest
         livenessProbe:
           exec:
             command:
