--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -26,7 +26,7 @@ applicationSpecs:
           value: "1"
         image:
           repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
-          tag: latest
+          tag: 1.2.2
         livenessProbe:
           exec:
             command:
