--- a/deploy/helm/charts/nemollm-inference/values.yaml
+++ b/deploy/helm/charts/nemollm-inference/values.yaml
@@ -24,7 +24,7 @@ applicationSpecs:
           value: ""
         image:
           repository: nvcr.io/nim/meta/llama-3.1-8b-instruct
-          tag: latest
+          tag: 1.2.2
         livenessProbe:
           exec:
             command:
